--- a/ReportApp/Info.plist
+++ b/ReportApp/Info.plist
@@ -2,8 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Usa fotos guardadas en tu galería.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Usa fotos guardadas en tu galería.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Usa la camara para tomar fotos.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Use location</string>
+	<string>Permite el acceso a tu localización.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
